--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -26,19 +26,17 @@
         med at finde de mest populære perler i København.</p>
 </section>
 <section class="image-gallery">
-    <img src="havfrue.jpg" alt="Den Lille Havfrue" style="width:300px;">
-    <img src="rundetårn.jpg" alt="Rundetåret" style="width:300px;">
-    <img src="tivoli.jpg" alt="Tivoli" style="width:300px;">
+    <img src="images/havfrue.jpg" alt="Den Lille Havfrue" style="width:300px;">
+    <img src="images/rundetårn.jpg" alt="Rundetåret" style="width:300px;">
+    <img src="images/tivoli.jpg" alt="Tivoli" style="width:300px;">
 </section>
 <h2>Udvalgte Turistattraktioner</h2>
 <ul>
-    <li><a href="https://www.visitcopenhagen.dk/koebenhavn/tivoli">Tivoli</a></li>
+    <li><a href="https://www.tivoli.dk/?gad_source=1&gclid=CjwKCAjwreW2BhBhEiwAavLwfAkYBhqRHh7A_0WOKeKZ8B4wQH0hjP2nfJjZn7o2AzniS3uDoKbrGRoCpIAQAvD_BwE">Tivoli</a></li>
     <li><a href="https://www.rundetaarn.dk/">Rundetårnet</a></li>
     <li><a href="https://faktalink.dk/titelliste/havf">Den Lille Havfrue</a></li>
 
 </ul>
-</section>
-
 <footer>
     <p>Kontakt os: turistguide@example.com | Telefon: +45 12 34 56 78 |</p>
 </footer>
